--- a/app/src/main/res/layout/list_cars.xml
+++ b/app/src/main/res/layout/list_cars.xml
@@ -1,56 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:orientation="horizontal"
-  android:padding="5dip">
+  android:padding="5dip"
+  android:orientation="horizontal">
 
-  <TextView
-    android:id="@+id/name"
-    android:layout_width="wrap_content"
+  <EditText
+    android:id="@+id/userDescription"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_below="@+id/year"
+    android:autoText="false"
+    android:ems="10"
+    android:gravity="start|top"
+    android:hint="@string/placeholder_user_description_textfield"
+    android:importantForAutofill="no"
+    android:inputType="textShortMessage|textLongMessage|none|textMultiLine"
+    android:minHeight="48dp"
+    android:selectAllOnFocus="false"
+    android:singleLine="false" />
   <TextView
     android:id="@+id/description"
+    android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/name"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
+    android:textSize="17sp" />
   <TextView
     android:id="@+id/dlc"
+    android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/description"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
+    android:textSize="17sp" />
   <TextView
     android:id="@+id/manufacturer"
+    android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/dlc"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
+    android:textSize="17sp" />
   <TextView
     android:id="@+id/raceclass"
+    android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/manufacturer"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
+    android:textSize="17sp" />
   <TextView
     android:id="@+id/year"
+    android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/raceclass"
-    android:textSize="17sp"
-    android:textStyle="bold" />
+    android:textSize="17sp" />
+  <TextView
+    android:id="@+id/name"
+    android:textStyle="bold"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="17sp" />
 
 </RelativeLayout>
